--- a/postgres/postgres-wal-statefulset.yaml
+++ b/postgres/postgres-wal-statefulset.yaml
@@ -7,6 +7,9 @@ metadata:
     app: postgres
 data:
   postgresql.conf: |
+    # Network Configuration
+    listen_addresses = '*'
+    
     # WAL Configuration for Debezium CDC
     wal_level = logical
     archive_mode = on
