--- a/kafka/statefulset.yaml
+++ b/kafka/statefulset.yaml
@@ -20,6 +20,8 @@ spec:
         ports:
         - containerPort: 9092
           name: plaintext
+        - containerPort: 9094
+          name: external
         - containerPort: 9093
           name: controller
         command:
@@ -37,9 +39,10 @@ spec:
           process.roles=broker,controller
           node.id=$NODE_ID
           controller.quorum.voters=0@localhost:9093
-          listeners=PLAINTEXT://:9092,CONTROLLER://:9093
+          listeners=PLAINTEXT://:9092,EXTERNAL://:9094,CONTROLLER://:9093
           inter.broker.listener.name=PLAINTEXT
-          advertised.listeners=PLAINTEXT://kafka:9092
+          advertised.listeners=PLAINTEXT://kafka:9092,EXTERNAL://192.168.0.25:9092
+          listener.security.protocol.map=PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT
           controller.listener.names=CONTROLLER
           log.dirs=/var/lib/kafka/data
           num.network.threads=3
