--- a/mykart/web-app/package.json
+++ b/mykart/web-app/package.json
@@ -16,7 +16,8 @@
     "pg": "^8.11.3",
     "cors": "^2.8.5",
     "body-parser": "^1.20.2",
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "kafkajs": "^2.2.4"
   },
   "keywords": ["ecommerce", "react", "postgresql"],
   "author": "MyKart Team",
